# mykit

./: .gitignore  404.md  README.md  _config.yml  home.md  index.md  pyproject.toml  readme.md  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: TurboTest.yml  auto-publish-on-commit.yml  fast-pypi-release.yml  publish-release-ci.yml  pypi-publish.yml  pypi-release.yml  rebuild-docs.yml  run-tests.yml  run_tests.yml  touch_docs.yml  update-docs.yml  upload_pypi.yml
.github/xxworkflowsxx/: fast-pypi-release.yml  run-tests.yml
_etc/: build_configs.json
_etc/docs/: settings.txt
_etc/docs_NICS/: 404.md
_includes/: footer.html  header.html
_layouts/: main.html  no-header.html
_pages/: 9.md  About.md  Changelog.md  Supports.md  about.md  changelog.md  index.md  supports.md
_pages/changelog/: index.md
_pages/demo/: index.md  mykit.app.md  mykit.kit.md  mykit.rec.md  mykit.web.md
_pages/docs/: Install.md  Installation.md  index.md  page1.md  page2.md
_pages/faqs/: index.md
_posts/: 2023-06-19-welcome-to-jekyll.markdown  post1.md
_sass/: constants.scss  footer.scss  header.scss  main.scss
_testing/: gui#button#v3.py#Button.py  gui#label#v2.py#Label.py  gui#slider#v2.py#_Slider.py  noise#__init__.py#_non_periodic_fn.py  noise#__init__.py#perlin_noise_1d.py  path#__init__.py#SafeJSON.py
archives/: 20230807_test_ghactions_eLog.yml
docs/: 3 - changelog.md  settings.txt
docs/_nics/: _help.txt
docs/tree/: 7 - Changelog.md  (+3 more)
mykit/: __init__.py  __main__.py
src/: __init__.py  __main__.py
tests/: __init__.py  __main__.py
(+111 files in other folders)
