[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "numba>=0.55.2",
  "numpy>=1.22.4"
]
build-backend = "setuptools.build_meta"


[project]
name = "mykit"
version = "0.1.3"
description = "Python utility library"
authors = [
  {name = "Nicholas Valentinus", email = "nvfastplease@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["python", "toolkit", "mykit"]


[project.urls]
Repository = "https://github.com/nvfp/mykit"
Bug Tracker = "https://github.com/nvfp/mykit/issues"